--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
     #summary-items div:last-child{border-bottom:none;}
     #summary-items strong{color:#FFD700;font-size:1.4rem;}
     .btn.gold,.btn.green,#btnPay,#btnTip,#startBtn{padding:0.7rem 1rem!important;font-size:1.1rem!important;margin:0.7rem 0!important;border-radius:16px!important;}
-    #startBtn{padding:1rem!important;font-size:1.35rem!important;border-radius:99px!important;}
+    #startBtn{
+  padding:1rem 2rem !important;
+  font-size:1.4rem !important;
+  font-weight:800;
+  border-radius:99px !important;
+  background:var(--gold);
+  color:#000;
+  box-shadow:0 6px 20px rgba(255,215,0,0.3);
+  margin-top:2rem;
+}
     #minus,#plus,#minusAdult,#plusAdult{padding:0.5rem 0.9rem!important;font-size:1.4rem!important;min-width:50px;}
     .btn.back{position:fixed;top:14px;right:14px;background:rgba(0,0,0,0.5)!important;backdrop-filter:blur(10px);border-radius:50%;width:68px;height:68px;display:flex;align-items:center;justify-content:center;z-index:9999;border:3px solid #FFD700;box-shadow:0 0 30px rgba(255,215,0,0.8);transition:all 0.3s;pointer-events:auto;}
     .btn.back svg{width:48px;height:48px;stroke-width:4.5;}
