--- a/index.html
+++ b/index.html
@@ -62,7 +62,37 @@
   margin-top:2rem;
 }
     #minus,#plus,#minusAdult,#plusAdult{padding:0.5rem 0.9rem!important;font-size:1.4rem!important;min-width:50px;}
-    .btn.back{position:fixed;top:14px;right:14px;background:rgba(0,0,0,0.5)!important;backdrop-filter:blur(10px);border-radius:50%;width:68px;height:68px;display:flex;align-items:center;justify-content:center;z-index:9999;border:3px solid #FFD700;box-shadow:0 0 30px rgba(255,215,0,0.8);transition:all 0.3s;pointer-events:auto;}
+    .btn.back{
+  position:fixed;
+  top:14px;
+  right:14px;
+  background:rgba(0,0,0,0.5) !important;
+  backdrop-filter:blur(10px);
+  border-radius:50%;
+  width:56px;
+  height:56px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:9999;
+  border:2px solid var(--gold);
+  box-shadow:0 4px 12px rgba(0,0,0,0.6);
+  transition:all 0.25s;
+  pointer-events:auto !important;   /* ← THIS LINE WAS MISSING — critical */
+  cursor:pointer;                   /* ← also good practice */
+}
+.btn.back svg{
+  width:32px;
+  height:32px;
+  stroke-width:3;
+  stroke:var(--gold);
+  pointer-events:none;   /* svg itself doesn’t need events */
+}
+.btn.back:hover,
+.btn.back:active {
+  transform:scale(1.1);
+  background:rgba(255,215,0,0.15) !important;
+}
     .btn.back svg{width:48px;height:48px;stroke-width:4.5;}
     .btn.back:hover{transform:scale(1.2);background:rgba(255,215,0,0.25)!important;box-shadow:0 0 40px rgba(255,215,0,1)!important;}
   </style>
