--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   font-size:2.2rem;        /* fixed size, no longer huge */
   box-shadow:0 4px 15px rgba(255,215,0,0.15);
   backdrop-filter:blur(4px);
+      pointer-events: auto;
 }
     #progress{display:flex;justify-content:center;gap:1rem;margin:1.5rem 0;flex-wrap:wrap;font-size:2.2rem;}
     .step{display:none;padding:1.5rem 0;}
