--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   color:#000;
   box-shadow:0 6px 20px rgba(255,215,0,0.3);
   margin-top:2rem;
+      pointer-events: auto;
 }
     #minus,#plus,#minusAdult,#plusAdult{padding:0.5rem 0.9rem!important;font-size:1.4rem!important;min-width:50px;}
     .btn.back{
