--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
       <p class="msg">Arrival & Departure</p>
       <input type="date" id="arriveDate"><input type="date" id="departDate">
       <p style="margin:1rem 0;font-size:1.3rem;">Nights: <strong><span id="nightCount">1</span></strong></p>
-      <button id="minus" class="btn">–</button>
-      <button id="plus" class="btn">+</button>
+      <button id="minus">–</button>
+      <button id="plus">+</button>
       <p style="margin:1rem 0;">Adults:
-        <button id="minusAdult" class="btn">–</button>
+        <button id="minusAdult">–</button>
         <strong id="adultCount">1</strong>
-        <button id="plusAdult" class="btn">+</button>
+        <button id="plusAdult">+</button>
       </p>
       <p>Kids: <input type="number" id="kids" value="0" min="0" style="width:80px;"></p>
       <button class="btn gold" id="btn3">Next</button>
