--- a/index.html
+++ b/index.html
@@ -72,27 +72,36 @@
   transform: translateY(-2px);
   box-shadow: 0 12px 30px rgba(255, 215, 0, 0.4);
 }
-   #minus, #plus, #minusAdult, #plusAdult {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  background: rgba(255,255,255,0.15);
-  color: var(--gold);
-  font-size: 1.8rem;
-  font-weight: bold;
-  border: 2px solid rgba(255,215,0,0.3);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 1rem;
-  transition: all 0.2s;
-  backdrop-filter: blur(4px);
+   /* ────── FINAL TINY + / − BUTTONS (perfect size, no inheritance issues) ────── */
+#minus, #plus, #minusAdult, #plusAdult {
+  width: 44px !important;
+  height: 44px !important;
+  min-width: 44px !important;
+  padding: 0 !important;
+  margin: 0 12px !important;
+  border-radius: 50% !important;
+  background: rgba(255, 255, 255, 0.12) !important;
+  color: var(--gold) !important;
+  font-size: 2rem !important;
+  font-weight: bold !important;
+  border: 2px solid rgba(255, 215, 0, 0.4) !important;
+  display: inline-flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  backdrop-filter: blur(8px);
+  transition: all 0.22s ease;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
 }
-#minus:hover, #plus:hover, #minusAdult:hover, #plusAdult:hover {
-  background: var(--gold);
-  color: #000;
-  transform: scale(1.1); pointer-enters: auto;
-} 
+
+#minus:hover, #plus:hover,
+#minusAdult:hover, #plusAdult:hover,
+#minus:active, #plus:active,
+#minusAdult:active, #plusAdult:active {
+  background: var(--gold) !important;
+  color: #000 !important;
+  transform: scale(1.12) !important;
+  box-shadow: 0 0 20px rgba(255,215,0,0.6) !important;
+}
     .btn.back{
   position:fixed;
   top:14px;
