--- a/index.html
+++ b/index.html
@@ -202,21 +202,43 @@ input, select, button {
       <button class="btn gold" id="btnFlight">Next</button>
     </div>
 
-    <div id="step3" class="step">
-      <button class="btn back"><svg viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
-      <p class="msg">Arrival & Departure</p>
-      <input type="date" id="arriveDate"><input type="date" id="departDate">
-      <p style="margin:1rem 0;font-size:1.3rem;">Nights: <strong><span id="nightCount">1</span></strong></p>
-      <button id="minus">–</button>
-      <button id="plus">+</button>
-      <p style="margin:1rem 0;">Adults:
-        <button id="minusAdult">–</button>
-        <strong id="adultCount">1</strong>
-        <button id="plusAdult">+</button>
-      </p>
-      <p>Kids: <input type="number" id="kids" value="0" min="0" style="width:80px;"></p>
-      <button class="btn gold" id="btn3">Next</button>
-    </div>
+<div id="step3" class="step">
+  <button class="btn back"><svg viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
+  <p class="msg">When are you coming?</p>
+
+  <!-- Single, beautiful date inputs — same style as +/− buttons -->
+  <div style="text-align:center;margin:2rem 0;">
+    <label style="color:var(--gold);font-size:1.1rem;display:block;margin-bottom:0.5rem;">Arrival</label>
+    <input type="date" id="arriveDate" style="width:280px;height:56px;padding:0 1rem;border-radius:28px;background:rgba(255,255,255,0.12);border:2px solid rgba(255,215,0,0.4);color:#fff;font-size:1.3rem;text-align:center;backdrop-filter:blur(8px);">
+  </div>
+
+  <div style="text-align:center;margin:1.5rem 0;">
+    <label style="color:var(--gold);font-size:1.1rem;display:block;margin-bottom:0.5rem;">Departure</label>
+    <input type="date" id="departDate" style="width:280px;height:56px;padding:0 1rem;border-radius:28px;background:rgba(255,255,255,0.12);border:2px solid rgba(255,215,0,0.4);color:#fff;font-size:1.3rem;text-align:center;backdrop-filter:blur(8px);">
+  </div>
+
+  <div style="text-align:center;margin:2rem 0;font-size:1.8rem;color:var(--gold);font-weight:700;">
+    Nights: <strong><span id="nightCount">1</span></strong>
+  </div>
+
+  <!-- Nights counter -->
+  <div style="display:flex;align-items:center;justify-content:center;gap:20px;margin:1rem 0;">
+    <button id="minus">−</button>
+    <span style="font-size:1.4rem;color:var(--gold);">Nights</span>
+    <button id="plus">+</button>
+  </div>
+
+  <!-- Adults counter -->
+  <div style="display:flex;align-items:center;justify-content:center;gap:20px;margin:2rem 0;">
+    <button id="minusAdult">−</button>
+    <span style="font-size:1.5rem;color:var(--gold);">Adults: <strong id="adultCount">1</strong></span>
+    <button id="plusAdult">+</button>
+  </div>
+
+  <p style="text-align:center;margin:1rem 0;">Kids: <input type="number" id="kids" value="0" min="0" style="width:90px;height:44px;border-radius:22px;background:rgba(255,255,255,0.12);border:2px solid rgba(255,215,0,0.3);text-align:center;"></p>
+
+  <button class="btn gold" id="btn3">Next</button>
+</div>
 
     <div id="step4" class="step">
       <button class="btn back"><svg viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
