--- a/index.html
+++ b/index.html
@@ -178,6 +178,28 @@ input, select, button {
   box-shadow: 0 0 30px rgba(255,215,0,0.6) !important;
   transform: scale(1.03);
 }
+#progress span {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  background: rgba(255,255,255,0.05);
+  backdrop-filter: blur(10px);
+  transition: all 0.3s ease;
+}
+
+#progress span:hover {
+  background: rgba(255,215,0,0.15);
+  transform: scale(1.2) !important;
+  box-shadow: 0 0 25px rgba(255,215,0,0.5);
+}
+
+#progress span:active {
+  transform: scale(1.1) !important;
+}
+    
   </style>
 </head>
 <body>
