--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ const updateProgress = () => {
   const p = document.getElementById('progress');
   p.innerHTML = '';
   
-  const icons = ['Home','Travel','Plane','Calendar','Map','Wave','Bed','Car','Ticket','Cart'];
+  const icons = ['🏠','🧳','✈️','📆','🗺️','🎢','🛌','🚕','🎟️','🛒'];
   const steps = [0, 1, 2, 2.5, 3, 4, 5, 6, 7, 8]; // maps icon index → step number
 
   icons.forEach((emoji, i) => {
