--- a/index.html
+++ b/index.html
@@ -199,7 +199,13 @@ input, select, button {
 #progress span:active {
   transform: scale(1.1) !important;
 }
-    
+  :root{
+  --green: #006644;          /* deep jade base */
+  --green-light: #008C76;    /* satin highlight */
+  --gold: #E5B80B;           /* real gold base */
+  --gold-shine: #FFEA9E;     /* bright metallic highlight */
+  --gold-glow: #FFC107;      /* inner glow */
+}  
   </style>
 </head>
 <body>
