--- a/index.html
+++ b/index.html
@@ -427,10 +427,9 @@ input, select, button {
     <div id="step5" class="step">
       <button class="btn back"><svg viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
       <p class="msg">Coastal or Inland?</p>
-      <div class="option-card" data-value="coastal"><div class="info"><div class="name">Coastal</div></div></div>
-      <div class="option-card" data-value="inland"><div class="info"><div class="name">Inland</div></div></div>
-      <button class="btn gold" id="btnVibe">Next</button>
-    </div>
+            <div class="option-card" data-value="coastal"><div class="info">Coastal</div></div>
+      <div class="option-card" data-value="inland"><div class="info">Inland</div></div>
+      <button class="btn gold auto-show" id="vibeNext" onclick="next(6)" style="display:none;">Next</button></div>
 
     <div id="step6" class="step">
       <button class="btn back"><svg viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
